--- a/index.html
+++ b/index.html
@@ -226,6 +226,15 @@
                 position: absolute
             }
         </style>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://vlon4ik.github.io/Mam-Mane/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://vlon4ik.github.io/Mam-Mane/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://vlon4ik.github.io/Mam-Mane/favicon-16x16.png">
+<link rel="manifest" href="https://vlon4ik.github.io/Mam-Mane/site.webmanifest">
+<link rel="mask-icon" href="https://vlon4ik.github.io/Mam-Mane/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="https://vlon4ik.github.io/Mam-Mane/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="https://vlon4ik.github.io/Mam-Mane/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 
 </body>
